base/cis_policies_v1.10.0/templates/cis-requiredlabels-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            parameters:
              type: object
              properties:
                labels:
                  type: array
                  items:
                    type: string
                labelValues:
                  type: object
                  additionalProperties:
                    type: array
                    items:
                      type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        required := object.get(input.parameters, "labels", [])
        allowed := object.get(input.parameters, "labelValues", {})

        labels := object.get(input.review.object.metadata, "labels", {})

        missing_label(label) {
          not labels[label]
        }

        invalid_value(label) {
          some label
          allowed[label]
          labels[label]
          not contains(allowed[label], labels[label])
        }

        contains(arr, x) {
          some i
          arr[i] == x
        }

        violation[{"msg": msg}] {
          some i
          label := required[i]
          missing_label(label)
          msg := sprintf("missing required label: %s", [label])
        }

        violation[{"msg": msg}] {
          some i
          label := required[i]
          invalid_value(label)
          msg := sprintf("label %s must be one of %v", [label, allowed[label]])
        }
